Create league tabs based on api info